Revert "Fix sidebar spacing and avatar path"
This reverts commit 3c266e82fbc4b341b220e7fe09d0a0bda2912bdd.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -237,13 +237,10 @@
 }
 
 .academic-profile {
-  box-sizing: border-box;
-  margin-right: 1rem;
   padding: 1.5rem 0.75rem;
   text-align: center;
   background: #28284c;
   color: #f5f5fb;
-  overflow-wrap: break-word;
 
   .author__avatar {
     display: block;
@@ -320,7 +317,6 @@
   }
 
   .author__sub-link {
-    display: inline-block;
     margin-left: 1.6em;
   }
 }
